@@ -7,7 +7,8 @@ Click to return to the link:index.html[uthash home page].
 
 Version 1.9.6 (2012-??-??)
 --------------------------
-* added parens and casts and removed extraneous semi-colons (thanks, Atis!) 
+* edit examples so they do not leak memory as suggested by 任晶磊
+* add parens, casts, remove extra semi-colons (thanks, Atis and Debasis Ganguly!)
 * added ifndef to uthash_malloc and related hooks so it's no longer
   necessary to `undef` these before changing the hooks (thanks, Holger Machens!)
 
